--- a/src/package.json
+++ b/src/package.json
@@ -1,12 +1,10 @@
 {
-  "license": "MIT",
   "dependencies": {
     "busboy": "^0.3.1",
     "colors": "^1.4.0",
-    "connect-busboy": "^0.0.2",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.6",
     "fs-extra": "^8.1.0",
+    "path": "^0.12.7",
     "unique-filename": "^1.1.1"
   }
 }
